app-of-apps/apps/kuma/numa-ingress.yaml
  apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
      name: kuma-route
      namespace: kuma
      annotations:
          cert-manager.io/cluster-issuer: cloudflare-issuer
  spec:
      ingressClassName: kong
      tls:
      - secretName: kuma-cert
        hosts:
        - kuma.apps.k8s.vdude.io
      rules:
      - host: kuma.apps.k8s.vdude.io
        http:
          paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: kuma-service
                port:
                  number: 80
